--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <body>
   <h1> This site is going to make me a millionaire! </h1>
   
-  <img src="https://www.facebook.com/photo.php?fbid=10200285785539688&set=a.1383425278068.2047229.1605060308&type=1&theater"></img>
+  <img src="https://www.facebook.com/photo.php?fbid=10200285785539688&set=a.1383425278068.2047229.1605060308&type=1&theater">
 </body>
 </html>
