--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
 </head>
 <body>
   <h1> This site is going to make me a millionaire! </h1>
+ 	
+ 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"</script>
+ 	<!-- Latest compiled and minified JavaScript -->
+ 	<script src="https://maxdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.mn.js"</script>
+ 
 </body>
 </html>
