--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
  <div class="container">
   	<div class="jumbotron">
   		<h1> This site is going to make me a millionaire! </h1>
+  		<button class="btn btn-primary btn-lg">Login with Instagram</button>
  	</div>
  </div>
  
