--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head> 
+	<!-- Link to load Font Awesome Icon set from CSS -->
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
@@ -12,16 +15,16 @@
 
 </head>
 <body>
- <div class="container">
-  	<div class="jumbotron">
-  		<h1> This site is going to make me a millionaire! </h1>
-  		<button class="btn btn-primary btn-lg">Login with Instagram</button>
- 	</div>
- </div>
+	<div class="container">
+  		<div class="jumbotron">
+  			<h1> This site is going to make me a millionaire! </h1>
+  			<button class="btn btn-primary btn-lg">Login with <i class="fa fa-instagram"></i>Instagram</button>
+ 		</div>
+	</div>
  
- 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"</script>
+ 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
  	<!-- Latest compiled and minified JavaScript -->
- 	<script src="https://maxdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.mn.js"</script>
+ 	<script src="https://maxdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.mn.js"></script>
  
 </body>
 </html>
