--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<div class="container">
   		<div class="jumbotron">
   			<h1> This site is going to make me a millionaire! </h1>
+  			<!-- fa fa-instagram is from font awesome referenced above -->
   			<button class="btn btn-primary btn-lg">Login with <i class="fa fa-instagram"></i> Instagram</button>
  		</div>
 	</div>
