--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   			<button class="btn btn-primary btn-lg">Login with <i class="fa fa-instagram"></i> Instagram</button>
  		</div>
 	</div>
+	
+	<div class="row" id="instafeed" style="padding-top: 50px;>
+		<h1>User photos should load here</h1>
+	</div>
  
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
  	<!-- Latest compiled and minified JavaScript -->
