--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
  		</div>
 	</div>
 	
-	<div class="row" id="instafeed" style="padding-top: 50px;>
+	<div class="row" id="instafeed" style="padding-top: 50px;">
 		<h1>User photos should load here</h1>
-	</div>
- 
+ 	</div>
+ 	
  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
  	<!-- Latest compiled and minified JavaScript -->
  	<script src="https://maxdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.mn.js"></script>
