--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   		<div class="jumbotron">
   			<h1> This site is going to make me a millionaire! </h1>
   			<!-- fa fa-instagram is from font awesome referenced above -->
-  			<button class="btn btn-primary btn-lg">Login with <i class="fa fa-instagram"></i> Instagram</button>
+  			<a href="https://api.instagram.com/oauth/authorize/?client_id=CLIENT-ID&redirect_uri=REDIRECT-URI&response_type=code" </a><button class="btn btn-primary btn-lg">Login with <i class="fa fa-instagram"></i> Instagram</button></a>
  		</div>
 	
 	
