--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   		<div class="jumbotron">
   			<h1> This site is going to make me a millionaire! </h1>
   			<!-- fa fa-instagram is from font awesome referenced above -->
-  			<a href="https://instagram.com/oauth/authorize/?client_id=7289372a4506430bbb00360596dfc507&redirect_uri=REDIRECT-URI&response_type=token"></a></a><button class="btn btn-primary btn-lg">Login with <i class="fa fa-instagram"></i> Instagram</button></a>
+  			<a href="https://instagram.com/oauth/authorize/?client_id=7289372a4506430bbb00360596dfc507&redirect_uri=http://jsibo.github.io/feedme/&response_type=token"></a></a><button class="btn btn-primary btn-lg">Login with <i class="fa fa-instagram"></i> Instagram</button></a>
  		</div>
 	
 	
