--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
  		$(document).ready(function() {
  			console.log("Document is now ready!");
  			var imageHolder = $("#instafeed"); 						<!-- jquery goes and finds the id of instafeed -->
+ 			console.log($(window));
  		});
  		
  	</script>
