--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
  			console.log("Document is now ready!");
  			var imageHolder = $("#instafeed"); 						<!-- jquery goes and finds the id of instafeed -->
  			console.log($(window));
+ 			var myToken = window.location.hash.split("=");
  		});
  		
  	</script>
