--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
  			var imageHolder = $("#instafeed"); 						<!-- jquery goes and finds the id of instafeed -->
  			console.log($(window));
  			var myToken = window.location.hash.split("=");
+ 			console.log(mytoken);
  		});
  		
  	</script>
