--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
  			var imageHolder = $("#instafeed"); 						<!-- jquery goes and finds the id of instafeed -->
  			console.log($(window));
  			var myToken = window.location.hash.split("=");
- 			console.log(mytoken);
+ 			console.log(myToken);
+ 			
+ 			
  		});
  		
  	</script>
